<resources>
    <string name="app_name">Light Messenger</string>
    <string name="light_messenger">Light Messenger</string>
    <string name="your_email">Your email:</string>
    <string name="your_password">Your Password:</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register">Register</string>
    <string name="registration">Registration</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="name">Name:</string>
    <string name="last_name">Last name:</string>
    <string name="age">Age:</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_password_tv">Forgot Password?</string>
    <string name="reset_password">Reset password</string>
    <string name="logout">Logout</string>
    <string name="type_your_message">Type your message:</string>
</resources>